fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  overflow: auto;
 }
 
 * {
